# ssc_prep_backend

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 40c080801906_create_users_table.py  cebfd8afb7bb_leaderboard_create.py
app/: main.py
app/api/: dependencies.py
app/api/v1/auth/: auth_model.py  auth_router.py  auth_schema.py  auth_service.py  auth_utilities.py
app/api/v1/leaderboard/: leaderboard_model.py  leaderboard_router.py  leaderboard_schema.py  leaderboard_service.py
app/core/: exception_handlers.py  response.py  setting.py  utilities.py
app/db/: session.py
